@@ -42,7 +42,14 @@ INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL,'tfc','Teleporter_Exit_Fin
 INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL,'tfc','Built_Dispenser',8,0,'0','Built Dispenser','1','0','0','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL,'tfc','Discovered_Spy',2,0,'0','Discovered a Spy','1','0','0','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL,'tfc','Dispenser_Destroyed',5,0,'0','Dispenser Destroyed','1','0','0','0');
-
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Medic_Heal', '1', '0', '', 'Heal', '0', '1', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL,'tfc','Hallucination_Grenade','Hallucination_Grenade',0.50);
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Concussion_Grenade', '1', '0', '', 'Concussion Grenade  / Shockwave' , '0', '1', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Caltrop_Grenade', '1', '0', '', 'Caltrops' , '0', '1', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Sentry_Upgrade_Level_1', '2', '0', '', 'Build Sentry', '1', '0', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Sentry_Upgrade_Level_2', '5', '0', '', 'Buld Sentry level 2', '1', '0', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Sentry_Upgrade_Level_3', '10', '0', '', 'Build Sentry level 3', '1', '0', '0', '0');
+INSERT IGNORE INTO ++DB_PREFIX++_Actions VALUES (NULL , 'tfc', 'Medic_Cured_Hallucinations', '10', '0', '', 'Heal Hallucinations', '0', '1', '0', '0');
 
 #
 # Teams
@@ -51,6 +58,10 @@ INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','1','Blue','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','2','Red','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','3','Yellow','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','4','Green','0');
+INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','Blue','Blue','0');
+INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','Red','Red','0');
+INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','Yellow','Yellow','0');
+INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','Green','Green','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','#Hunted_team1','(Hunted) VIP','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','#Hunted_team2','(Hunted) Bodyguards','0');
 INSERT IGNORE INTO ++DB_PREFIX++_Teams VALUES (NULL,'tfc','#Hunted_team3','(Hunted) Assassins','0');
@@ -106,3 +117,4 @@ INSERT IGNORE INTO ++DB_PREFIX++_Weapons VALUES (NULL,'tfc','spanner','Spanner',
 INSERT IGNORE INTO ++DB_PREFIX++_Weapons VALUES (NULL,'tfc','caltrop','Caltrops',2.00);
 INSERT IGNORE INTO ++DB_PREFIX++_Weapons VALUES (NULL,'tfc','railgun','Rail Gun',1.85);
 INSERT IGNORE INTO ++DB_PREFIX++_Weapons VALUES (NULL,'tfc','building_dispenser','Dispenser',2.00);
+INSERT IGNORE INTO ++DB_PREFIX++_Weapons VALUES (NULL,'tfc','headshot','Headshot',1.50);
